# scr-boilerplate-playwright

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: cli.py
src/config/: settings.py
src/core/: browser_manager.py  logger.py  page_utils.py  scraper_base.py
src/scrapers/: example_scraper.py
